--- a/CMD/CMD.csproj
+++ b/CMD/CMD.csproj
@@ -40,6 +40,9 @@
     <Reference Include="Chemistry, Version=1.0.134.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\mzLib.1.0.134\lib\Chemistry.dll</HintPath>
     </Reference>
+    <Reference Include="FluentCommandLineParser, Version=1.4.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentCommandLineParser.1.4.3\lib\net35\FluentCommandLineParser.dll</HintPath>
+    </Reference>
     <Reference Include="ManagedThermoHelperLayer, Version=1.0.134.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\mzLib.1.0.134\lib\ManagedThermoHelperLayer.dll</HintPath>
     </Reference>
@@ -62,6 +65,9 @@
     <Reference Include="NetSerializer, Version=4.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NetSerializer.4.1.0\lib\net45\NetSerializer.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Nett, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Nett.0.6.2\lib\Net40\Nett.dll</HintPath>
     </Reference>
     <Reference Include="Proteomics, Version=1.0.134.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\mzLib.1.0.134\lib\Proteomics.dll</HintPath>
@@ -100,6 +106,9 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="SearchTaskExample.toml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TaskLayer\TaskLayer.csproj">
@@ -119,6 +128,10 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\mzLib.1.0.134\build\mzLib.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\mzLib.1.0.134\build\mzLib.targets'))" />
   </Target>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
