Add new example task files

--- a/CMD/CMD.csproj
+++ b/CMD/CMD.csproj
@@ -107,7 +107,19 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="SearchTaskExample.toml">
+    <None Include="Task1SearchExample.toml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Task2CalibrationExample.toml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Task3SearchExample.toml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Task4GptmdExample.toml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Task5SearchExample.toml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
