--- a/CMD/Task5SearchExample.toml
+++ b/CMD/Task5SearchExample.toml
@@ -1,19 +1,19 @@
 ListOfModListsFixed = ["Mods\\f.txt"]
 ListOfModListsVariable = ["Mods\\v.txt"]
-ListOfModListsLocalize = ["Mods\\ptmlist.txt"]
-ProductMassTolerance = "±0.01 Absolute"
+ListOfModListsLocalize = ["Mods\\m.txt", "Mods\\metals.txt", "Mods\\pt.txt", "Mods\\ptmlist.txt"]
+ProductMassTolerance = "±0.0100 Absolute"
 ClassicSearch = true
 DoParsimony = false
-NoOneHitWonders = true
+NoOneHitWonders = false
 Quantify = false
-QuantifyRtTol = 77.0
-QuantifyPpmTol = 77.0
-DoHistogramAnalysis = true
+QuantifyRtTol = 3.0
+QuantifyPpmTol = 5.0
+DoHistogramAnalysis = false
 SearchDecoy = true
-SearchModes = ["10ppmAroundZero ppmAroundZero 10"]
+SearchModes = ["5ppmAroundZero ppmAroundZero 5"]
 ConserveMemory = false
 TaskType = "Search"
-InitiatorMethionineBehavior = "Cleave"
+InitiatorMethionineBehavior = "Variable"
 MaxMissedCleavages = 2
 MaxModificationIsoforms = 4096
 Protease = "trypsin"
