--- a/CMD/CMD.csproj
+++ b/CMD/CMD.csproj
@@ -36,6 +36,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <LangVersion>6</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Chemistry, Version=1.0.138.0, Culture=neutral, processorArchitecture=AMD64">
