--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -102,6 +102,7 @@
     <Compile Include="CalibrationEngine\TransformFunction.cs" />
     <Compile Include="CalibrationEngine\CalibrationResults.cs" />
     <Compile Include="AllowedIntervalWithNotch.cs" />
+    <Compile Include="ProteinLevelInfo.cs" />
     <Compile Include="PsmWithMultiplePossiblePeptides.cs" />
     <Compile Include="ClassicSearch\ScanWithIndexAndNotchInfo.cs" />
     <Compile Include="EventArgs\MyRecursiveEventArgs.cs" />
