--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -174,6 +174,7 @@
     <Compile Include="EventArgs\StringListEventArgs.cs" />
     <Compile Include="SequencesToActualProteinPeptidesEngine.cs" />
     <Compile Include="SequencesToActualProteinPeptidesEngineResults.cs" />
+    <Compile Include="XLSearchResults.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\elements.dat">
