--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -63,6 +63,9 @@
     <Reference Include="MzML, Version=1.0.194.0, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\packages\mzLib.1.0.194\lib\MzML.dll</HintPath>
     </Reference>
+    <Reference Include="Nett, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Nett.0.7.0\lib\Net40\Nett.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.7.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.7.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -112,6 +115,7 @@
     <Compile Include="IndexEngineTest.cs" />
     <Compile Include="SearchEngineTests.cs" />
     <Compile Include="TestDataFile.cs" />
+    <Compile Include="TestToml.cs" />
     <Compile Include="TestScan.cs" />
     <Compile Include="MyEngineTest.cs" />
   </ItemGroup>
