--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -120,8 +120,10 @@
     <Compile Include="MatchedIonMassesListPositiveIsMatch.cs" />
     <Compile Include="ModificationAnalysis\ModificationAnalysisEngine.cs" />
     <Compile Include="ModificationAnalysis\ModificationAnalysisResults.cs" />
-    <Compile Include="ProteinAnalysis\ProteinAnalysisEngine.cs" />
-    <Compile Include="ProteinAnalysis\ProteinAnalysisResults.cs" />
+    <Compile Include="ProteinScoringAndFdr\ProteinScoringAndFdrEngine.cs" />
+    <Compile Include="ProteinScoringAndFdr\ProteinScoringAndFdrResults.cs" />
+    <Compile Include="ProteinParsimony\ProteinParsimonyEngine.cs" />
+    <Compile Include="ProteinParsimony\ProteinParsimonyResults.cs" />
     <Compile Include="SearchType.cs" />
     <Compile Include="Localization\LocalizationEngine.cs" />
     <Compile Include="ProteinLevelInfo.cs" />
@@ -159,7 +161,7 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SonarQubeExclude>true</SonarQubeExclude>
     </Compile>
-    <Compile Include="ProteinAnalysis\ProteinGroup.cs" />
+    <Compile Include="ProteinParsimony\ProteinGroup.cs" />
     <Compile Include="PrecursorSearchModes\OpenMassDiffAcceptor.cs" />
     <Compile Include="PrecursorSearchModes\MassDiffAcceptor.cs" />
     <Compile Include="PrecursorSearchModes\SingleAbsoluteAroundZeroMassDiffAcceptor.cs" />
