--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -100,6 +100,7 @@
   <ItemGroup>
     <Compile Include="AddCompIonsTest.cs" />
     <Compile Include="AnalysisEngineTest.cs" />
+    <Compile Include="StefanParsimonyTest.cs" />
     <Compile Include="SlicedTest.cs" />
     <Compile Include="FakeMsDataFile.cs" />
     <Compile Include="LocalizationTest.cs" />
