--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -133,7 +133,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="SearchTaskconfig.toml">
+    <None Include="SlicedSearchTaskConfig.toml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="sliced-db.fasta">
