--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -103,6 +103,7 @@
   <ItemGroup>
     <Compile Include="AddCompIonsTest.cs" />
     <Compile Include="AnalysisEngineTest.cs" />
+    <Compile Include="FdrTest.cs" />
     <Compile Include="BinGenerationTest.cs" />
     <Compile Include="StefanParsimonyTest.cs" />
     <Compile Include="SlicedTest.cs" />
