--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -132,6 +132,8 @@
     <Compile Include="ProteinParsimony\ProteinParsimonyResults.cs" />
     <Compile Include="ProteinScoringAndFdr\ProteinScoringAndFdrEngine.cs" />
     <Compile Include="ProteinScoringAndFdr\ProteinScoringAndFdrResults.cs" />
+    <Compile Include="Proteomics\CompactPeptideBase.cs" />
+    <Compile Include="Proteomics\CompactPeptideWithModifiedMass.cs" />
     <Compile Include="SearchType.cs" />
     <Compile Include="Localization\LocalizationEngine.cs" />
     <Compile Include="ProteinLevelInfo.cs" />
