--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -37,7 +37,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <LangVersion>6</LangVersion>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Chemistry, Version=1.0.208.0, Culture=neutral, processorArchitecture=AMD64">
