--- a/EngineLayer/EngineLayer.csproj
+++ b/EngineLayer/EngineLayer.csproj
@@ -129,6 +129,7 @@
     <Compile Include="ProteinScoringAndFdr\ProteinScoringAndFdrResults.cs" />
     <Compile Include="Proteomics\CompactPeptideBase.cs" />
     <Compile Include="Proteomics\CompactPeptideWithModifiedMass.cs" />
+    <Compile Include="Proteomics\ProductTypeToTerminusType.cs" />
     <Compile Include="SearchType.cs" />
     <Compile Include="Localization\LocalizationEngine.cs" />
     <Compile Include="ProteinLevelInfo.cs" />
